[project]
name = "dependency-map"
version = "0.1.0"
description = "Compute & plot dependency maps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "data-url>=1.3.0",
    "drawsvg>=2",
    "numpy>=2",
    "plotly>=6",
    "matplotlib>=3",
    "scipy>=1",
    "tqdm>=4",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
examples = [
    "kaleido>=1.0.0",
    "torch>=2.8.0",
    "transformers>=4.55.4",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
include = ["examples", "src/dependency_map"]
